<resources>
    <string name="app_name">WatLeak</string>

    <string name="userLogin">Email or Phone number</string>
    <string name="userpass">Password</string>
    <string name="loginRegister">Don\'t have account?Register</string>
    <string name="emergency">Report quickly</string>
    <string name="login">Log In</string>
    <string name="watleak">WatLeak</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="firstname">First name</string>
    <string name="phone_number">Phone number</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="brief_description">Brief description</string>
    <string name="complaint">Complaint</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="female">Female</string>
    <string name="male">Male</string>

</resources>
