<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bluehat.watleakprothree.Report">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:title="@string/app_name"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_height="match_parent">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="37dp"
                android:text="@string/complaint"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtCom_GPS"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textAlignment="center"
                android:hint="Tap to get location"
                android:layout_marginTop="54dp" />

            <EditText
                android:id="@+id/etCom_Details"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="27dp"
                android:ems="10"
                android:hint="@string/brief_description"
                android:inputType="textMultiLine" />

            <Spinner
                android:visibility="gone"
                android:id="@+id/spinner"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/imgCom_Photo"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:layout_height="wrap_content">


                    <Button
                        android:id="@+id/btnCapture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="Take Photo" />

                    <Button
                        android:id="@+id/btnChoose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="Choose Photo" />
                </LinearLayout>

            </LinearLayout>


            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/btnCom_Submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="14dp"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
</LinearLayout>