<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context="com.bluehat.watleakprothree.Login">

    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/watleak"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold"
                android:padding="20dp"
                android:layout_marginTop="50dp"
                />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="30dp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/etLogin_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email or Phonenumber" />

    <EditText
        android:id="@+id/etLogin_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login" />

    <TextView
        android:id="@+id/txtLogin_forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Forgot Password?"
        android:textSize="15sp" />
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:text="OR"
        android:textSize="15sp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtLogin_emergency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/emergency"
        android:textSize="15sp" />

</LinearLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"></FrameLayout>

<LinearLayout
    android:paddingTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

<RelativeLayout

    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtLogin_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/btnLogin_help"
        android:text="@string/loginRegister"
        android:textSize="13sp"

        />

            <Button
                android:id="@+id/btnLogin_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginLeft="50dp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="help"
                android:layout_marginRight="79dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="79dp" />


</RelativeLayout>

</LinearLayout>


        </LinearLayout>























    </ScrollView>



</RelativeLayout>
